--- a/public/css/site.css
+++ b/public/css/site.css
@@ -22,4 +22,14 @@ html {
 
 .active{
   display: block;
-}    
+}
+
+.title {
+  font-size: 3vw !important;
+  font-weight: 700 !important;
+}
+
+.nav-shaddow {
+  box-shadow: 0px 0px 39px 0px rgba(0,0,0,0.15);
+  z-index: 300 !important;
+}
