--- a/public/css/site.css
+++ b/public/css/site.css
@@ -25,11 +25,20 @@ html {
 }
 
 .title {
-  font-size: 3vw !important;
-  font-weight: 700 !important;
+  line-height: 120%;
 }
 
 .nav-shaddow {
   box-shadow: 0px 0px 39px 0px rgba(0,0,0,0.15);
   z-index: 300 !important;
+}
+
+/* carousel height */
+.carousel {
+  height: 160px;
+}
+
+/* cell inherit height from carousel */
+.carousel-cell {
+  height: 100%;
 }
